Bug 1645595 - Update message tracker of messages API when messages are modified due to attachment removal. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D116388